calculate total score for each player

--- a/Views/Player/Details.cshtml
+++ b/Views/Player/Details.cshtml
@@ -9,6 +9,9 @@
     <input type="submit" name="Add Score" />
 </form>
 
+<h3>Total</h3>
+<label>@Model.TotalScore</label>
+
 <h3>Scores</h3>
 <ul>
     foreach(var score in Model.Scores)
